# regex

./: .gitignore  .pylintrc  README.md  __init__.py  example_regex_viewer.spec  playground.py  pyproject.toml  setup.py  test.py
.github/workflows/: pylint.yml  test_pyinstaller.yml  tests.yml
docs/: 2024 DIG301 - AS91906 Programming Own Project Proposal.docx  2024_dig301_as91906_documentation.docx
examples/: debug_viewer.py  email_address.py  phone_number.py  regex_viewer.py
regex/: __init__.py  regex_factory.py  regex_optimiser.py
regex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  __main__.py  debug_graph_viewer.py  funcutil.py  networkx_curved_label.py  regex.py  regex_builder.py  regex_factory.py  regex_optimiser.py  regex_optimisers.py  regexutil.py  todo.txt
src/regex/: __init__.py  debug_graph_viewer.py  regex.py  regex_factory.py  regex_optimiser.py  regexutil.py
src/regex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: __init__.py  regex_matcher.py  regex_tests.py  test.py  test_error.py
tests/: __init__.py  __main__.py  regex_tests.py  test.py  test_error.py
